--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=edeac687_spring
 spring.datasource.password=$PRINGd@ta2018
 
 # SQL Config
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
 spring.jpa.hibernate.use_sqlcomments=true
 spring.jpa.hibernate.format_sql=true
